<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/me_profile_pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:layout_marginTop="105dp"
        android:contentDescription="@string/profile_pic_desc"
        android:src="@drawable/default_profile_picture" />

    <TextView
        android:id="@+id/me_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/me_profile_pic"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/name"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/me_grade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/me_name"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/grade_hint"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/me_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/points"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/me_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/me_points"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/level"
        android:textSize="18sp" />

</RelativeLayout>