<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/answer_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:onClick="answerClick"
        android:tag="3"
        android:text="@string/ans_4" />

    <Button
        android:id="@+id/answer_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/answer_4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:onClick="answerClick"
        android:tag="2"
        android:text="@string/ans_3" />

    <Button
        android:id="@+id/answer_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/answer_3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:onClick="answerClick"
        android:tag="1"
        android:text="@string/ans_2" />

    <Button
        android:id="@+id/answer_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/answer_2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:onClick="answerClick"
        android:tag="0"
        android:text="@string/ans_one" />

    <TextView
        android:id="@+id/question_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/question"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>