<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/title"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/description_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/description_title"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/subtitle"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/description_post_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/description_subtitle"
        android:layout_marginTop="32dp"
        android:paddingLeft="10dp"
        android:text="@string/post_time"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/description_likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/description_post_time"
        android:paddingLeft="10dp"
        android:text="@string/likes"
        android:textColor="@color/Peak"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/description_comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/description_likes"
        android:layout_alignBottom="@+id/description_likes"
        android:layout_alignParentRight="true"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/comments"
        android:textColor="@color/Peak"
        android:textSize="16sp" />

    <ListView
        android:id="@+id/comment_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText1"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/description_likes"
        android:paddingTop="10dp" >

    </ListView>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:ems="10" >

        <requestFocus />
    </EditText>

</RelativeLayout>